# python_fastapi_practice

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: chore.md  epic.md  hotfix.md  story.md  task.md
docs/: coding_conventions.md  git_conventions.md
tests/unit/features/health/: test_health.py
